Добавлены изменения в index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Макет сайта</title>
+    <title>Макет сайта appCreation</title>
   </head>
   <body>
     <header>
@@ -22,7 +22,7 @@
         <button type="button" name="button">Schedule free consultation</button>
       </main>
       <div class="">
-        <img src="" alt="">        
+        <img src="" alt="">
       </div>
     </section>
   </body>
