Добавлены изменения в название файла index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Макет сайта</title>
+    <title>Макет сайта для appCreation</title>
   </head>
   <body>
     <header>
