Добавление шрифта и файла style.css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Макет сайта для appCreation</title>
+    <meta name="twitter:" content="width=device-width, initial-scale=1">
+    <title>Макет сайта</title>
+    <link rel="stylesheet" href="./fonts.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <header>
