--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
+
   <head>
     <meta charset="utf-8">
     <meta name="twitter:" content="width=device-width, initial-scale=1">
     <title>Макет сайта</title>
-    <link rel="stylesheet" href="./fonts.css">
+    <link rel="stylesheet" href="fonts.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
+
   <body>
+   <div class="wrapper">
     <header class="header">
       <div class="logo">app.creation</div>
-      <nav class="menu"
+      <nav class="menu">
         <a class="menu__item" href="#">start</a>
         <a class="menu__item" href="#">services</a>
         <a class="menu__item" href="#">about</a>
@@ -29,5 +32,7 @@
         <img class="image-content__image" src="" alt="">
       </div>
     </section>
+   </div>
   </body>
+
 </html>
