--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
    <div class="wrapper">
     <header class="header">
       <div class="logo">app.creation
-        
+        <div class="logo__circle logo__circle_color_dark-blue"></div>
+        <div class="logo__circle logo__circle_color_blue"></div>
       </div>
       <nav class="menu">
         <a class="menu__item" href="#">start</a>
