--- a/index.html
+++ b/index.html
@@ -29,10 +29,23 @@
       </nav>
     </header>
     <section class="main">
-        <h1 class="main__title">Building an App <span class="main__title-text_highlight">Without Design Expertise?</span></h1>
+        <h1 class="main__title">Building an App <span class="main__title-text_highlight">Without Design Expertise</span>?</h1>
         <p class="main__subtitle">I help tech startups design better digital products without hiring a full-time designer</p>
         <a class="main__button" href="#">Schedule free consultation</a>
     </section>
+    <footer>
+      <div class="owl-dots">
+        <div class="owl-dot">
+          <span></span>
+        </div>
+        <div class="owl-dot">
+          <span></span>
+        </div>
+        <div class="owl-dot">
+          <span></span>
+        </div>
+      </div>
+    </footer>
    </div>
   </body>
 
