--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <meta name="twitter:" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Макет сайта</title>
 
     <link rel="stylesheet" href="fonts.css">
@@ -20,6 +20,11 @@
         <div class="logo__circle logo__circle_color_dark-blue"></div>
         <div class="logo__circle logo__circle_color_blue"></div>
       </div>
+      <div class="hamburger-menu">
+        <input id="menu__toggle" type="checkbox" />
+        <label class="menu__btn" for="menu__toggle">
+          <span></span>
+        </label>
       <nav class="menu">
         <a class="menu__item" href="#">start</a>
         <a class="menu__item menu__item_active" href="#">services</a>
@@ -30,7 +35,7 @@
     </header>
     <section class="main">
         <h1 class="main__title">Building an App <span class="main__title-text_highlight">Without Design Expertise</span>?</h1>
-        <p class="main__subtitle">I help tech startups design better digital products without hiring a full-time designer</p>
+        <p class="main__subtitle">I help tech startups design better digital products without hiring a&nbsp;full-time designer</p>
         <a class="main__button" href="#">Schedule free consultation</a>
     </section>
     <footer>
