--- a/index.html
+++ b/index.html
@@ -20,6 +20,19 @@
         <div class="logo__circle logo__circle_color_dark-blue"></div>
         <div class="logo__circle logo__circle_color_blue"></div>
       </div>
+      <div class="hamburger-menu">
+          <input id="menu__toggle" type="checkbox" />
+          <label class="menu__btn" for="menu__toggle">
+             <span></span>
+          </label>
+          <ul class="menu__box">
+            <li><a class="menu__hamburger" href="#">start</a></li>
+			      <li><a class="menu__hamburger" href="#">services</a></li>
+		       	<li><a class="menu__hamburger" href="#">about</a></li>
+		      	<li><a class="menu__hamburger" href="#">blog</a></li>
+			      <li><a class="menu__hamburger" href="#">contact us</a></li>
+          </ul>
+      </div>
       <nav class="menu">
         <a class="menu__item" href="#">start</a>
         <a class="menu__item menu__item_active" href="#">services</a>
