корректировка разметки меню

--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
              <span></span>
           </label>
           <ul class="menu__box">
-            <li><a class="menu__hamburger" href="#">start</a></li>
-			      <li><a class="menu__hamburger" href="#">services</a></li>
-		       	<li><a class="menu__hamburger" href="#">about</a></li>
-		      	<li><a class="menu__hamburger" href="#">blog</a></li>
-			      <li><a class="menu__hamburger" href="#">contact us</a></li>
+            <div class="container">
+              <li><a class="menu__hamburger" href="#">start</a></li>
+  			      <li><a class="menu__hamburger" href="#">services</a></li>
+  		       	<li><a class="menu__hamburger" href="#">about</a></li>
+  		      	<li><a class="menu__hamburger" href="#">blog</a></li>
+  			      <li><a class="menu__hamburger" href="#">contact us</a></li>
+            </div>
           </ul>
       </div>
       <nav class="menu">
